<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="exit">Exit</string>
    <string name="app_name">Finding Futsal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="developer">Muhammad Muzakki</string>
    <string name="jurus">Teknik Informatika</string>
    <string name="kampus">Universitas Gunadarma \n2016</string>
    <string name="title_activity_registration">Registrasi</string>
    <string name="title_activity_main">Finding Futsal</string>
    <string name="menu_settings">Menu Pengaturan</string>
    <string name="bantuan">Bantuan</string>
    <string name="home">Kembali</string>
    <string name="tentang">Tentang</string>
    <string name="lapfut">Lap. Futsal</string>
    <string name="settings">Exit</string>
    <string name="update">Update Contact \nInformation</string>
    <string name="update_User">Update Informasi \nPribadi</string>
    <string name="name">Nama Pengguna </string>
    <string name="enter_name">Ucup Cobain</string>
    <string name="number">No. Telp Rumah</string>
    <string name="enter_number">Masukkan 10 sampai 12 Digit Nomor</string>
    <string name="updateEM">Update Nomor \nKerabat</string>
    <string name="cancel">Batal</string>
    <string name="update_user">Update Informasi \nPribadi</string>
    <string name="address">Alamat</string>
    <string name="enter_address">Jl. Ceria No.1, Kota Tangerang</string>
    <string name="blood_type">Gol. Darah</string>
    <string name="device_owner">Device Owner</string>
    <string name="guest">Guest</string>
    <string name="guest_name">Enter Guest Name</string>
    <string name="guest_blood_type">Enter Guest Blood Type</string>
    <string name="guest_phone_number">Enter Guest Phone Number</string>
    <string name="preview">Preview</string>
    <string name="save">Simpan</string>
    <string name="home_address">Alamat Rumah</string>
    <string name="enter_home_address">Jl. Ceria No.1, Kota Tangerang</string>
    <string name="home_phone">No. Telp Rumah</string>
    <string name="enter_home_phone">Masukkan 10 sampai 12 Digit Nomor</string>
    <string name="emergency_contact">Nama Kerabat</string>
    <string name="kerabat">Kerabat</string>
    <string name="enter_em">Masukkan Nama Kerabat</string>
    <string name="emergency_number">No. Telp Kerabat</string>
    <string name="enter_em_number">Masukkan 10 sampai 12 Digit Nomor</string>
    <string name="send">Kirim</string>
    <string name="enter_location">Masukkan Lokasi</string>
    <string name="gps_location">Gunakan Lokasi GPS</string>
    <string name="location">Lokasi</string>
    <string name="title_activity_maps">Maps</string>
    <string name="fire_station">Pemadam Kebakaran</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="title_activity_sqlite_helper">SQLiteHelper</string>
    <string name="format_name">Format: Depan Belakang</string>
    <string name="format_address">Format: Nama Jalan, Kota</string>
    <string name="format_phone_number">Format: 021xxxxxxxx (10 sampai 12 digit nomor)</string>
    <string name="title_activity_pop_up">PopUpActivity</string>
    <string name="title_activity_direction">DirectionActivity</string>
    <string name="title_activity_sos">Sos</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_update_em">Kerabat</string>
    <string name="title_activity_update__user">Update_User</string>
    <string name="title_activity_tambah_nomor">TambahNomor</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="tn">Tambah Nomor</string>
    <string name="title_activity_list">List</string>
    <string name="nama_kerabat">Nama Kerabat</string>
    <string name="title_activity_add_number">AddNumber</string>
    <string name="title_activity_tentang">Tentang</string>
    <string name="title_activity_baba">Baba</string>
    <string name="title_activity_savannah">Savannah</string>
    <string name="title_activity_cakra">Cakra</string>
    <string name="title_activity_bywi">Bywi</string>
    <string name="title_activity_hut">Hut</string>
    <string name="title_activity_centro">Centro</string>
    <string name="title_activity_total">Total</string>
    <string name="title_activity_center">Center</string>
    <string name="title_activity_ground">Ground</string>
    <string name="title_activity_star">Star</string>
    <string name="title_activity_pelangi">Pelangi</string>
    <string name="title_activity_elang">Elang</string>
    <string name="title_activity_crystal">Crystal</string>
    <string name="title_activity_magnet">Magnet</string>
    <string name="title_activity_bee">Bee</string>
    <string name="title_activity_rakyat">Rakyat</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_waw">Waw</string>
    <string name="title_activity_champions">Champions</string>

</resources>
