<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0000ff"
    android:orientation="vertical"
    android:padding="30dp"
    android:weightSum="14" >

    <ImageView
        android:id="@+id/appimage"
        android:layout_width="525dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="9.80"
        android:contentDescription="@string/developer"
        android:padding="30dp"
        android:src="@drawable/zxc" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:minHeight="20dp"
        android:text="@string/developer"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:minHeight="20dp"
        android:text="@string/jurus" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:minHeight="20dp"
        android:text="@string/kampus"/>


    <!--
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#aa00aa00"
            android:textStyle="bold" /> -->






</LinearLayout>